Bug 330698 - Crash while performing a drag and drop between 2 Krita
Summary: Crash while performing a drag and drop between 2 Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 2.8 Beta
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-03 11:49 UTC by David REVOY
Modified: 2014-02-06 08:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
[ ^ *** kcrash report ] (7.05 KB, text/plain)
2014-02-03 11:49 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2014-02-03 11:49:02 UTC
Created attachment 84967 [details]
[ ^  *** kcrash report ]

Hi, I just got a crash while wanting to drag and drop a layer across two Krita instance opened. ( I wanted to drag a layer from the stack of Krita1 into the canvas of Krita2 ). I didn't tried to reproduce, I rarely use this feature. The crash log ( 3 stars )  is on attachment.
Comment 1 Dmitry Kazakov 2014-02-03 14:31:53 UTC
Hi, David!

Could you less a bit more about the color spaces/sizes of the images and what exactly you dragged and to which docker/canvas dropped?

The point is I cannot reproduce it in a trivial case :(
Comment 2 Dmitry Kazakov 2014-02-06 07:44:59 UTC
Git commit 32e0dfd39088307f56c93679f4f70bf6d5896d76 by Dmitry Kazakov.
Committed on 06/02/2014 at 07:44.
Pushed by dkazakov into branch 'master'.

Fix a crash when trying to D&D too big layer (>20MiB)

Qt implements D&D using X11 window properties, which were probably
not supposed to be used for transferring 20+MiB between applications.
So we indroduced a new "application/x-krita-node-url" mime format
which saved the image into a temporary directory and passes the url only.
That is the way Qt handles "application/x-qt-image" itself.

M  +71   -35   krita/ui/kis_mimedata.cpp

http://commits.kde.org/calligra/32e0dfd39088307f56c93679f4f70bf6d5896d76
Comment 3 Dmitry Kazakov 2014-02-06 08:06:58 UTC
Git commit 018207621c0bf9f0f42c3869cd27e1932a71827e by Dmitry Kazakov.
Committed on 06/02/2014 at 07:44.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix a crash when trying to D&D too big layer (>20MiB)

Qt implements D&D using X11 window properties, which were probably
not supposed to be used for transferring 20+MiB between applications.
So we indroduced a new "application/x-krita-node-url" mime format
which saved the image into a temporary directory and passes the url only.
That is the way Qt handles "application/x-qt-image" itself.

M  +71   -35   krita/ui/kis_mimedata.cpp

http://commits.kde.org/calligra/018207621c0bf9f0f42c3869cd27e1932a71827e