Fix a crash when trying to D&D too big layer (>20MiB)

Qt implements D&D using X11 window properties, which were probably
not supposed to be used for transferring 20+MiB between applications.
So we indroduced a new "application/x-krita-node-url" mime format
which saved the image into a temporary directory and passes the url only.
That is the way Qt handles "application/x-qt-image" itself.

BUG:330698